--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Mentari</title>
         <meta name="description" content="Practice mental maths" />
         <link rel="stylesheet" href="./index.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css" integrity="sha384-t5CR+zwDAROtph0PXGte6ia8heboACF9R5l/DiY+WZ3P2lxNgvJkQk5n7GPvLMYw" crossorigin="anonymous">
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.js" integrity="sha384-FaFLTlohFghEIZkw6VGwmf9ISTubWAVYW8tG8+w2LAIftJEULZABrF9PPFv+tVkH" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="content">
@@ -17,13 +19,16 @@
                 <div class="answer-latex-container">
                 </div>
                 <div class="answer-plain-container">
-                    <input type="text" id="answer-input">
+                    <input type="text" id="answer-input" oninput="render_answer(this)">
                 </div>
             </div>
         </div>
-        <div class="button-search">
+        <div class="button-search" onclick="toggle_search()">
         </div>
-        <div class="button-skip">
+        <div class="button-skip" onclick="skip_question()">
+        </div>
+        <div class="search-box-container">
+            <input type="text" id="search-input" oninput="search_envs(this)" onfocusout="toggle_search()">
         </div>
     </body>
 </html>
