--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <i class="fas fa-forward"></i>
         </div>
         <div class="search-box-container">
-            <input type="text" id="search-input" class="search" oninput="search_envs(this)" onfocusout="toggle_search()">
+            <input type="text" id="search-input" class="search" oninput="search_envs(this)" onfocusout="toggle_search(true)" placeholder="Search for an environment">
             <hr/>
             <div id="searching-list">
                 <ul class="search-results list">
