--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="answer-latex-container">
                 </div>
                 <div class="answer-plain-container">
-                    <input type="text" id="answer-input" oninput="render_answer(this); check_answer(this)">
+                    <input type="text" id="answer-input" oninput="render_answer(); check_answer(this)">
                 </div>
             </div>
         </div>
