--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
         <title>Mentari</title>
         <meta name="description" content="Practice mental maths" />
         <link rel="stylesheet" href="./index.css" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css" integrity="sha384-t5CR+zwDAROtph0PXGte6ia8heboACF9R5l/DiY+WZ3P2lxNgvJkQk5n7GPvLMYw" crossorigin="anonymous">
-        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.js" integrity="sha384-FaFLTlohFghEIZkw6VGwmf9ISTubWAVYW8tG8+w2LAIftJEULZABrF9PPFv+tVkH" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
+        <link rel="stylesheet" href="./vendor/katex.min.css">
+        <script src="./vendor/hotkeys.min.js"></script>
+        <script defer src="./vendor/katex.min.js"></script>
     </head>
     <body>
         <div class="content">
@@ -29,10 +28,10 @@
             </div>
         </div>
         <div class="button-search icon-button" onclick="toggle_search()">
-            <i class="fa fa-search"></i>
+            <i>SEARCH</i>
         </div>
         <div class="button-skip icon-button" onclick="skip_question()">
-            <i class="fas fa-forward"></i>
+            <i>SKIP</i>
         </div>
         <div class="search-box-container">
             <input type="text" id="search-input" class="search" oninput="search_envs(this)" onfocusout="toggle_search(true)" placeholder="Search for an environment">
