Add solve button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <div class="button-skip icon-button" onclick="skip_question()">
             <i>SKIP</i>
         </div>
+        <div class="button-solve icon-button" onclick="solve_question()">
+            <i>SOLVE</i>
+        </div>
         <div class="search-box-container">
             <input type="text" id="search-input" class="search" oninput="search_envs(this)" onfocusout="toggle_search(true)" placeholder="Search for an environment">
             <hr/>
