--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
         <meta name="description" content="Practice mental maths" />
         <link rel="stylesheet" href="./index.css" />
         <link rel="stylesheet" href="./vendor/katex.min.css">
+        <link rel="stylesheet" href="./vendor/alertify.min.css">
+        <link rel="stylesheet" href="./vendor/semantic.min.css">
         <script src="./vendor/hotkeys.min.js"></script>
+        <script src="./vendor/clipboard.min.js"></script>
+        <script src="./vendor/alertify.min.js"></script>
         <script defer src="./vendor/katex.min.js"></script>
     </head>
     <body>
@@ -35,6 +39,12 @@
         </div>
         <div class="button-solve icon-button" onclick="solve_question()">
             <i>SOLVE</i>
+        </div>
+        <div class="button-export icon-button">
+            <i>EXPORT</i>
+        </div>
+        <div class="button-import icon-button" onclick="stats_import()">
+            <i>IMPORT</i>
         </div>
         <div class="search-box-container">
             <input type="text" id="search-input" class="search" oninput="search_envs(this)" onfocusout="toggle_search(true)" placeholder="Search for an environment">
