--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <link rel="stylesheet" href="./vendor/katex.min.css">
         <link rel="stylesheet" href="./vendor/alertify.min.css">
         <link rel="stylesheet" href="./vendor/semantic.min.css">
-        <script src="./vendor/hotkeys.min.js"></script>
-        <script src="./vendor/clipboard.min.js"></script>
-        <script src="./vendor/alertify.min.js"></script>
         <script defer src="./vendor/katex.min.js"></script>
+        <script src="./vendor/alertify.min.js"></script>
+        <script src="./vendor/clipboard.min.js"></script>
+        <script src="./vendor/fraction.min.js"></script>
+        <script src="./vendor/hotkeys.min.js"></script>
     </head>
     <body>
         <div class="content">
