Added icons & manifest

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Mentari</title>
         <meta name="description" content="Practice mental maths" />
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="./index.css" />
         <link rel="stylesheet" href="./vendor/katex.min.css">
         <link rel="stylesheet" href="./vendor/alertify.min.css">
