--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="answer-latex-container">
                 </div>
                 <div class="answer-plain-container">
-                    <input type="text" inputmode="numeric" id="answer-input" oninput="render_answer(); check_answer(this)">
+                    <input type="text" inputmode="text" id="answer-input" oninput="render_answer(); check_answer(this)">
                 </div>
             </div>
         </div>
